# cloudcolorization

./: .gitmodules  CMakeLists.txt  README.md  colorize_point_cloud.cpp  run_colorize_point_cloud.sh  scene.cpp
